--- a/index.html
+++ b/index.html
@@ -13,36 +13,79 @@
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous" />
+      <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
     <title>Верстка по макету psd</title>
   </head>
-  <body>
-    <header class="menu-bar">
-      <div class="conteiner">
+  <body class="body">
+    <nav class="menu-bar">
+      <div class="container">
         <div class="row">
           <div class="col-xl-2">
             <img src="./img/logo.png" alt="logo" class="logo" />
           </div>
           <div class="col-xl-8 ms-auto align-self-center">
-            <nav>
-              <!-- для ul добавляем 
-                    d-flex(display:flex)- класс бутстрапа выстраиваем меню в линию
-                    justify-content-end  - контент контейнера смещаем вконец(справа)-->
-              <ul class="memu d-flex justify-content-end">
-                <li class="menu__item"><a href="#">Home</a></li>
-                <li class="menu__item"><a href="#">About</a></li>
-                <li class="menu__item"><a href="#">Servising</a></li>
-                <li class="menu__item"><a href="#">Portfolio</a></li>
-                <li class="menu__item"><a href="#">Blog</a></li>
-                <li class="menu__item"><a href="#">Contact us</a></li>
-                <li class="menu__item">
-                  <i class="fa-sharp fa-solid fa-magnifying-glass"></i>
-                </li>
-              </ul>
-            </nav>
+            <!-- для ul добавляем 
+              d-flex(display:flex)- класс бутстрапа выстраиваем меню в линию
+              justify-content-end  - контент контейнера смещаем вконец(справа)-->
+            <ul class="memu d-flex justify-content-end">
+              <li class="menu__item"><a href="#">Home</a></li>
+              <li class="menu__item"><a href="#">About</a></li>
+              <li class="menu__item"><a href="#">Servising</a></li>
+              <li class="menu__item"><a href="#">Portfolio</a></li>
+              <li class="menu__item"><a href="#">Blog</a></li>
+              <li class="menu__item"><a href="#">Contact us</a></li>
+              <li class="menu__item">
+                <i class="fa-sharp fa-solid fa-magnifying-glass"></i>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <header class="header">
+      <div class="container">
+        <div class="row">
+          <div class="col-12-xl">
+            <h1 class="header__title">Web development project</h1>
+            <p class="header__text">
+              Very suitable to support all web development projects
+            </p>
+            <a class="button">OUR SERVICES</a>
+            <a class="button">HIRE IS NOW</a>
+            <span class="arrow1"></span>
+            <span class="arrow2"></span>
           </div>
         </div>
       </div>
     </header>
+    <section class="about">
+      <div class="container bg-img">
+        <div class="row justify-content-center">
+          <h2 class="about__title">About Us</h2>
+          <p class="about__text col-xl-7 ">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+        </div>
+        <div class="row justify-content-around">
+          <div class="col-xl-3">
+            <img src="./img/internet.png" alt="internet" class="about__img">
+            <h3 class="about__subtitle">Awesome Icons</h3>
+            <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+          </div>
+          <div class="col-xl-3">
+            <img src="./img/transfer.png" alt="transfer" class="about__img">
+            <h3 class="about__subtitle">One Page</h3>
+            <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+          </div>
+          <div class="col-xl-3">
+            <img src="./img/head.png" alt="head" class="about__img">
+            <h3 class="about__subtitle">Fully Responsive</h3>
+            <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
