--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous" />
-      <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap"
+      rel="stylesheet" />
     <title>Верстка по макету psd</title>
   </head>
   <body class="body">
+    <!-- НАВИГАЦИЯ -->
     <nav class="menu-bar">
       <div class="container">
         <div class="row">
@@ -42,6 +47,7 @@
         </div>
       </div>
     </nav>
+    <!-- HAEDER -->
     <header class="header">
       <div class="container">
         <div class="row">
@@ -50,46 +56,164 @@
             <p class="header__text">
               Very suitable to support all web development projects
             </p>
-            <a class="button">OUR SERVICES</a>
-            <a class="button">HIRE IS NOW</a>
+            <a class="button button_white">OUR SERVICES</a>
+            <a class="button button_white">HIRE IS NOW</a>
             <span class="arrow1"></span>
             <span class="arrow2"></span>
           </div>
         </div>
       </div>
     </header>
+    <!-- БЛОК About Us -->
     <section class="about">
       <div class="container bg-img">
         <div class="row justify-content-center">
-          <h2 class="about__title">About Us</h2>
-          <p class="about__text col-xl-7 ">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+          <div class="col-xl-7">
+            <h2 class="about__title">About Us</h2>
+            <p class="about__text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam,
+            </p>
+          </div>
         </div>
         <div class="row justify-content-around">
           <div class="col-xl-3">
-            <img src="./img/internet.png" alt="internet" class="about__img">
+            <img src="./img/internet.png" alt="internet" />
             <h3 class="about__subtitle">Awesome Icons</h3>
-            <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+            <p class="about__textcard">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor
+            </p>
           </div>
           <div class="col-xl-3">
-            <img src="./img/transfer.png" alt="transfer" class="about__img">
+            <img src="./img/transfer.png" alt="transfer" />
             <h3 class="about__subtitle">One Page</h3>
-            <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+            <p class="about__textcard">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor
+            </p>
           </div>
           <div class="col-xl-3">
-            <img src="./img/head.png" alt="head" class="about__img">
+            <img src="./img/head.png" alt="head" />
             <h3 class="about__subtitle">Fully Responsive</h3>
-            <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+            <p class="about__textcard">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor
+            </p>
           </div>
         </div>
       </div>
-
     </section>
+    <!-- БЛОК С КАРТОЧКАМИ Our Services -->
+    <section class="services">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-xl-7">
+            <h2 class="about__title">Our Services</h2>
+            <p class="about__text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam,
+            </p>
+          </div>
+        </div>
+        <!-- КАРТОЧКИ -->
+        <div class="row justify-content-center">
+          <!-- №1 -->
+          <div class="col-xl-4">
+            <div class="infocard">
+              <img src="./img/smartphone_black.png" alt="" class="icon" />
+              <img src="./img/smartphone_white.png" alt="" class="icon_white" />
+              <h3 class="about__subtitle">Research</h3>
+              <p class="about__textcard">
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui
+                blanditiis praesentium voluptatum iti atque corrupti quos.
+              </p>
+              <a class="button button_black">READ MORE</a>
+            </div>
+          </div>
+          <!-- №2 -->
+          <div class="col-xl-4">
+            <div class="infocard">
+              <img src="./img/smartphone_black.png" alt="" class="icon" />
+              <img src="./img/smartphone_white.png" alt="" class="icon_white" />
+              <h3 class="about__subtitle">Portfolio</h3>
+              <p class="about__textcard">
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui
+                blanditiis praesentium voluptatum iti atque corrupti quos.
+              </p>
+              <a class="button button_black">READ MORE</a>
+            </div>
+          </div>
+          <!-- №3 -->
+          <div class="col-xl-4">
+            <div class="infocard">
+              <img src="./img/smartphone_black.png" alt="" class="icon" />
+              <img src="./img/smartphone_white.png" alt="" class="icon_white" />
+              <h3 class="about__subtitle">Support</h3>
+              <p class="about__textcard">
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui
+                blanditiis praesentium voluptatum iti atque corrupti quos.
+              </p>
+              <a class="button button_black">READ MORE</a>
+            </div>
+          </div>
+          <!-- №4 -->
+          <div class="col-xl-4">
+            <div class="infocard">
+              <img src="./img/smartphone_black.png" alt="" class="icon" />
+              <img src="./img/smartphone_white.png" alt="" class="icon_white" />
+              <h3 class="about__subtitle">Documentation</h3>
+              <p class="about__textcard">
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui
+                blanditiis praesentium voluptatum iti atque corrupti quos.
+              </p>
+              <a class="button button_black">READ MORE</a>
+            </div>
+          </div>
+          <!-- №5 -->
+          <div class="col-xl-4">
+            <div class="infocard">
+              <img src="./img/smartphone_black.png" alt="" class="icon" />
+              <img src="./img/smartphone_white.png" alt="" class="icon_white" />
+              <h3 class="about__subtitle">Development</h3>
+              <p class="about__textcard">
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui
+                blanditiis praesentium voluptatum iti atque corrupti quos.
+              </p>
+              <a class="button button_black">READ MORE</a>
+            </div>
+          </div>
+          <!-- №6 -->
+          <div class="col-xl-4">
+            <div class="infocard">
+              <img src="./img/smartphone_black.png" alt="" class="icon" />
+              <img src="./img/smartphone_white.png" alt="" class="icon_white" />
+              <h3 class="about__subtitle">Design</h3>
+              <p class="about__textcard">
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui
+                blanditiis praesentium voluptatum iti atque corrupti quos.
+              </p>
+              <a class="button button_black">READ MORE</a>
+            </div>
+          </div>
 
-
+        </div>
+      </div>
+    </section>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous">
+
+      const button= document.querySelector('.infocard')
+      const icon = document.querySelector('.icon')
+      button.addEventListener('onclick', function(){
+        console.log('fjhghkhilj')
+        icon.classList.toggle('icon_hover')
+      })
+    </script>
   </body>
 </html>
